fix select sidebar Handler on ios

--- a/public_html/static/css/scss/website/_footer.scss
+++ b/public_html/static/css/scss/website/_footer.scss
@@ -1,4 +1,11 @@
 #footer{
 	height: 100px;
+	-webkit-touch-callout:none;
+	-webkit-user-select:none;
+	-khtml-user-select:none;
+	-moz-user-select:none;
+	-ms-user-select:none;
+	user-select:none;
+	cursor:default;
 }
 
