--- a/public_html/static/css/scss/website/_sidebar.scss
+++ b/public_html/static/css/scss/website/_sidebar.scss
@@ -5,6 +5,13 @@
 	bottom: 0;
 	left: 0;
 	font-size: 1.4em;
+	-webkit-touch-callout:none;
+	-webkit-user-select:none;
+	-khtml-user-select:none;
+	-moz-user-select:none;
+	-ms-user-select:none;
+	user-select:none;
+	cursor:default;
 }
 .rtl #sidebar{
 	left: initial;
@@ -65,9 +72,17 @@
 	left: -25rem;
 	transition: 0.3s ease-in-out;
 }
+.rtl #sidebar .menu{
+	left: initial;
+	right: -25rem;
+}
 body[data-sidebar="dada"] #sidebar .menu{
 	left: 5rem;
     box-shadow: 0 16px 24px 2px rgba(0,0,0,.14), 0 6px 30px 5px rgba(0,0,0,.12), 0 8px 10px -5px rgba(0,0,0,.2);
+}
+body[data-sidebar="dada"].rtl #sidebar .menu{
+	left: initial;
+	right: 5rem;
 }
 #sidebar .menu a{
 	padding: 1rem 2rem;
@@ -75,7 +90,7 @@ body[data-sidebar="dada"] #sidebar .menu{
 	transition: 0.3s;
 }
 #sidebar .menu a:hover{
-	background-color: rgba(0,0,0,0.1);
+	background-color: rgba(0,0,0,0.05);
 }
 #sidebar .menu ul{
 	margin-top: 5rem;
@@ -91,6 +106,10 @@ body[data-sidebar="dada"] #sidebar .menu{
 	right: 0;
 	bottom: 0;
 }
+.rtl #sidebar .menu ul a:before{
+	left: 0;
+	right: 20px;
+}
 #sidebar .menu ul a:after{
 	content: '';
 	border-color: rgba(0,0,0,0.5);
@@ -103,8 +122,16 @@ body[data-sidebar="dada"] #sidebar .menu{
 	bottom: 0;
 	transition: 0.3s;
 }
+.rtl #sidebar .menu ul a:after{
+	left: 0;
+	right: 100%;
+}
 #sidebar .menu ul a:hover:after{
 	left: 20px;
+}
+.rtl #sidebar .menu ul a:hover:after{
+	left: 0;
+	right: 20px;
 }
 #sidebar .menu footer{
 	position: absolute;
